--- a/backend/webtacka.cabal
+++ b/backend/webtacka.cabal
@@ -10,6 +10,6 @@ Cabal-Version:       >=1.2
 Executable Main
   Main-is:           Main.hs
   Build-Depends:     base, containers, text, mtl, transformers,
-                     network, websockets, stm, json, bytestring
+                     network, websockets, stm, json, bytestring, random
 
 
